kadai-02/node_log.txt
Type ".help" for more information.
> .help
.break    Sometimes you get stuck, this gets you out
.clear    Alias for .break
.editor   Enter editor mode
.exit     Exit the repl
.help     Print this help message
.load     Load JS from a file into the REPL session
.save     Save all evaluated commands in this REPL session to a file

Press ^C to abort current expression, ^D to exit the repl
> const = 'Tama'
const = 'Tama'
      ^

Uncaught SyntaxError: Unexpected token '='
> const name = 'Tama'
undefined
> name
'Tama'
> const name = 'Pochi'
Uncaught SyntaxError: Identifier 'name' has already been declared
> let name1 = '123'
undefined
> name
'Tama'
> name1
'123'
> let name1 = '1234'
Uncaught SyntaxError: Identifier 'name1' has already been declared
> name ='1111'
Uncaught TypeError: Assignment to constant variable.
> name1 ='1111'
'1111'


Welcome to Node.js v12.19.0.
Type ".help" for more information.
> typeof '100'
'string'
> typeof "t@yq@] "
'string'
> typeof "ガンダム"
'string'
> typeof true
'boolean'
> typeof null
'object'
> 1+1
2
> 8000/8000
1
> 80/77
1.0389610389610389
> 'hello,world'+'bbb'
'hello,worldbbb